workspaces/optic-engine/src/learn_shape/snapshots/optic_engine__learn_shape__result__test__trail_observations_can_generate_commands_for_nullable_bodies__nullable_one_off_results.snap
---
source: workspaces/optic-engine-native/src/learn_shape/result.rs
expression: "&nullable_one_off_results"
---
(
    Some(
        "test-id-14",
    ),
    [
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-9",
                    base_shape_id: "$oneOf",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-12",
                    base_shape_id: "$string",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShapeParameter(
                AddShapeParameter {
                    shape_parameter_id: "test-id-10",
                    shape_id: "test-id-9",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-9",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-12",
                                },
                            ),
                            consuming_parameter_id: "test-id-10",
                        },
                    ),
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-13",
                    base_shape_id: "$number",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShapeParameter(
                AddShapeParameter {
                    shape_parameter_id: "test-id-11",
                    shape_id: "test-id-9",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-9",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-13",
                                },
                            ),
                            consuming_parameter_id: "test-id-11",
                        },
                    ),
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-14",
                    base_shape_id: "$nullable",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-14",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-9",
                                },
                            ),
                            consuming_parameter_id: "$nullableInner",
                        },
                    ),
                },
            ),
        ),
    ],
)
